@@ -133,6 +133,8 @@ Brian Wolf <  brian @ activustech.com > has contributed bug reports.
 Berend Tober < btober @ ieee.org > has contributed some to the 
 documentation and a number of bugfixes
 
+Ward Vandewege [email redacted] has contributed some bug fixes to LedgerSMB database management and migration scripts.
+
 
 Original Authors of SQL-Ledger:
 ===================================
