@@ -102,6 +102,7 @@ Changelog for 1.3.35
 * Fixed unable to edit quotation.tex (Chris T, 885)
 * Silenced warnings in Num2Text (Chris T)
 * Fixed blank weights sometimes making invoices unprintable (Chris T)
+* Fixed some bugs with SL2.8 to LedgerSMB upgrades (Chris T)
 
 Chris T is Chris Travers
 Nick P is Nick Prater
